# webmail

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  LOG.md  README.md  pyproject.toml
.devcontainer/: devcontainer.json
app/: __init__.py  auth.py  imap_functions.py  models.py  pages.py
app/templates/: home.html
etc/: pre-commit
tests/: test_web_pages.py
